# computerGraphicsRayTracingAssignment

./: .~lock.Assignment Write Up.odt#  Assignment Write Up.odt  Cone.cpp  Cone.h  Cylinder (copy).cpp  Cylinder.cpp  Plane.cpp  Plane.h  README.md  RayTracer  RayTracer.cpp  SceneObject.h
src/: CMakeCache.txt  CMakeLists.txt  Cylinder.cpp  Cylinder.h  Makefile  Plane.h  RayTracer.cpp  cmake_install.cmake
